--- a/src/components/Bio.astro
+++ b/src/components/Bio.astro
@@ -1,5 +1,5 @@
 <div>
-  <img src="https://avatars.githubusercontent.com/u/13052361?v=4" alt="Headshot of Bruno Pinto">
+  <img src="/dist/assets/avatar.jpg" alt="Headshot of Bruno Pinto">
   <p>
     Hi, I'm <strong>Bruno</strong>. I'm a software engineer based in Portugal.
     You can see some of my work on <a href="https://www.github.com/brunoabpinto" target="_blank">GitHub</a>.
