--- a/src/components/Bio.astro
+++ b/src/components/Bio.astro
@@ -1,7 +1,7 @@
 <div>
   <img src="/assets/avatar.jpg" alt="Headshot of Bruno Pinto">
   <p>
-    Hi, I'm <strong>Bruno</strong>. I'm a software engineer based in Portugal.
+    Hi, I'm <strong>Bruno</strong>. I'm a software engineer.
     You can see some of my work on <a href="https://www.github.com/brunoabpinto" target="_blank">GitHub</a>.
   </p>
 </div>
