--- a/src/components/Bio.astro
+++ b/src/components/Bio.astro
@@ -2,7 +2,7 @@
   <img src="/assets/avatar.jpg" alt="Headshot of Bruno Pinto">
   <p>
     Hi, I'm <strong>Bruno</strong>. I'm a software engineer.<br>
-    You can see some of my work on <a href="https://www.github.com/brunoabpinto" target="_blank">GitHub</a>.
+    You can see some of my work on <a href="https://www.github.com/brunoabpinto" target="_blank">GitHub</a> or follow me on <a href="https://www.x.com/brunopinto_dev" target="_blank">X</a>.
   </p>
 </div>
 
