add linkedin to bio

--- a/src/components/Bio.astro
+++ b/src/components/Bio.astro
@@ -4,7 +4,7 @@
   <img src="/assets/avatar.jpg" alt="Headshot of Bruno Pinto">
   <p>
     Hi, I'm <strong>Bruno</strong>. I'm a software engineer.<br>
-    You can see some of my work on <a href="https://www.github.com/brunoabpinto" target="_blank">GitHub</a> or follow me on <a href="https://www.x.com/brunopinto_dev" target="_blank">X</a>.
+    You can see some of my work on <a href="https://www.github.com/brunoabpinto" target="_blank">GitHub</a> or follow me on <a href="https://www.x.com/brunopinto_dev" target="_blank">X</a> and <a href="https://www.linkedin.com/in/bruno-pinto-774279123/" target="_blank">LinkedIn</a>.
   </p>
 </div>
 
